# MinorFs2

./: README  README.md
abandoned-python/: CapFsMain.py  DataDir.py  NullCrypto.py
cap_fs/: CMakeLists.txt  CapCore.py  CapFs.py  DataDir.py  Lookup.py  NullCrypto.py  XorCrypto.py  build.sh  cap_fs
cap_fs/access/: AppArmorCheck.cpp  AppArmorCheck.hpp  CapFsGuard.cpp  CapFsGuard.hpp  NoAccessFs.cpp  NoAccessFs.hpp
cap_fs/algo/: TripleHashLookup.cpp  TripleHashLookup.hpp  TripleHashNode.cpp  TripleHashNode.hpp  TripleHashParentChild.cpp  TripleHashParentChild.hpp
cap_fs/block/: llfile.cpp  llfile.hpp  modebits.cpp  modebits.hpp  modebits.txt  open_file.cpp  open_file.hpp  padded_block_file.hpp  testmain.cpp
cap_fs/capfs_algo/: TripleHashLookup.cpp  TripleHashLookup.hpp  TripleHashNode.cpp  TripleHashNode.hpp  TripleHashParentChild.cpp  TripleHashParentChild.hpp  base32.hpp  capfs_algo.cpp  capfs_algo.hpp  tripplehashmain.cpp
cap_fs/crypto/: Buffer.cpp  Buffer.hpp  Metrics.cpp  Metrics.hpp
cap_fs/fs/: AppArmorCheck.cpp  AppArmorCheck.hpp  BaseFs.cpp  BaseFs.hpp  BaseNode.cpp  BaseNode.hpp  CapFs.cpp  CapFs.hpp  CapFsGuard.cpp  CapFsGuard.hpp  NoAccessFs.cpp  NoAccessFs.hpp  OpenBaseNode.cpp  OpenBaseNode.hpp  OpenFileHandleCache.hpp  build.sh  main.cpp  openfilecollectiontype.hpp
cap_fs/test/: tripplehashmain2.cpp
capa_fs/: README.md
doc/: dirlayout.txt  granularities.txt
experiments/cap_fs/: Lookup.py  RawStorage.py
experiments/persistence-id/: PersistenceClass.py  PersistenceIdLookup.py  exampleconf
persistence-id/: PersistenceClass.py  SlotMachine.py
pid_fs/: README.md
util/: collectionfile.hpp  openfilecollection.hpp  openfilecollection_test.cpp
